<resources>
    <string name="app_name">WeightTrackingEmmanuelRivera</string>
    <string name="title">Weight Tracker</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="add_new_weight_or_goal">Add new weight or goal</string>
    <string name="new_weight">Enter New Weight</string>
    <string name="enter_weight">Enter weight (lbs)</string>
    <string name="save">Save</string>
    <string name="new_goal">Enter New Goal</string>
    <string name="enter_goal">Enter goal (lbs)</string>
    <string name="add_weight_option">Add Weight</string>
    <string name="add_goal_option">Add Goal</string>
    <string name="weight_saved">Weight saved</string>
    <string name="goal_saved">Goal saved</string>
    <string name="save_failed">Unable to save</string>
    <string name="enter_valid_number">Enter a valid number</string>
    <string name="user_not_found">Please log in again.</string>
    <string name="welcome_user">Welcome %1$s!</string>
    <string name="welcome_user_default">Welcome User</string>
    <string name="current_weight_value">%1$s lbs Current Weight</string>
    <string name="current_goal_value">%1$s lbs Goal Weight</string>
    <string name="current_weight_missing">No current weight</string>
    <string name="current_goal_missing">No goal set</string>
    <string name="enter_cell">Enter Cell# for Weight Goal reached notification!</string>
    <string name="number">Name</string>
    <string name="number_example">9999999999</string>
    <string name="submit">Submit</string>
</resources>