<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/ic_launcher_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_weight"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/weightInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_weight"
        android:inputType="numberDecimal"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="51dp" />

    <Button
        android:id="@+id/btnSaveWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/save"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="120dp" />

</androidx.constraintlayout.widget.ConstraintLayout>